﻿MiTvSpain V.1.1.14

10/08/2017

Se regenera todo el codigo a su estado original,
Reparado seriesblanco.animeflv
MiTvSpain V.1.1.13

09/08/2017

Reparada la opcion descargas


MiTvSpain V.1.1.12

08/08/2017

Reparada Biblioteca ,librerias  y cambio de iconos, Teneis que hacer limpieza de imagenes de kodi/smpc



MiTvSpain V.1.1.11

04/08/2017

Reparada opcion elegir gestor de torrente para versiones de Kodi y Smpc inferiores a 17.3

Añadidos canales:
				pepecine
				bajui2
				locopelis
				
MiTvSpain V.1.1.10

05/08/2017

Añadida opcion elegir gestor de torrente desde configuración, añadida opcion actualizacion de canales automaticos.




MiTvSpain v.1.1.9


Reparados: Bugs Internos del Addon, 
PlayPornX, 
Xtheatre, 
Metaserie, 
Cinefox,  




MiTvSpain v.1.1.8

01/08/2017

	Reparados: allcalidad
		   cinetux
		   plusdede
		   mejortorrent
	           playmax