@@ -16,27 +16,27 @@
 	<changes>
 		<change>
 			<date>15/03/2017</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>limpieza código</description>
 		</change>
 		<change>
 			<date>17/02/2017</date>
-			<autor>kerenmac</autor>
+			<autor></autor>
 			<description>Optimizado el sistema de modificacion y restauracion de advancedsettings.xml. Creada alerta para equipos lentos o TV-BOX sobre 'ZeroCache'. Tambien se ha creado el apartado FAQ con atajos para dudas/problemas tipicos.</description>
 		</change>
 		<change>
 			<date>13/07/2016</date>
-			<autor>kerenmac</autor>
+			<autor></autor>
 			<description>Fixed: The "advancedsettings.xml" file optimization method now makes a backup before modifying it and, instead of replacing the file, it modifies the file and substitutes the optimised settings for streaming, all the modification are done inside the existing "advancedsettings.xml" file.</description>
 		</change>
 		<change>
 			<date>22/06/2016</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>Eliminado código innecesario.</description>
 		</change>
 		<change>
 			<date>28/08/2015</date>
-			<autor>tvalacarta</autor>
+			<autor></autor>
 			<description>First MiTvSpain release</description>
 		</change>
 	</changes>
