@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <channel>
-	<id>biblioteca</id>
+	<id>libreria</id>
 	<name>Biblioteca</name>
 
 	<active>false</active>
@@ -17,17 +17,17 @@
 	<changes>
 		<change>
 			<date>15/03/2017</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>limpieza código</description>
 		</change>
 		<change>
 			<date>01/07/16</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>Eliminado código innecesario.</description>
 		</change>
 		<change>
 			<date>30/04/2016</date>
-			<autor>Seitan</autor>
+			<autor></autor>
 			<description>Version inicial</description>
 		</change>
 	</changes>
