@@ -17,27 +17,27 @@
 	<changes>
 		<change>
 			<date>25/05/17</date>
-			<autor>super_berny</autor>
+			<autor></autor>
 			<description>añadido control parental</description>
 		</change>
 		<change>
 			<date>15/03/2017</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>limpieza código</description>
 		</change>
 		<change>
 			<date>17/02/17</date>
-			<autor>kerenmac</autor>
+			<autor></autor>
 			<description>Cambios de detalles visuales</description>
 		</change>
 		<change>
 			<date>06/12/16</date>
-			<autor>super_berny</autor>
+			<autor></autor>
 			<description>Añadir al menu: 'Recordar última búsqueda'</description>
 		</change>
 		<change>
 			<date>01/07/16</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>Eliminado código innecesario.</description>
 		</change>
 		<change>
