@@ -17,17 +17,17 @@
 	<changes>
 		<change>
 			<date>15/03/2017</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>limpieza código</description>
 		</change>
 		<change>
 			<date>12/03/17</date>
-			<autor>divadr</autor>
+			<autor></autor>
 			<description>Añadidas mas opciones de configuracion y corregidos fallos</description>
 		</change>
 		<change>
 			<date>12/01/17</date>
-			<autor>divadr</autor>
+			<autor></autor>
 			<description></description>
 		</change>
 	</changes>
