@@ -3,7 +3,7 @@
 	<id>elitetorrent2</id>
 	<name>EliteTorrent2</name>
 
-	<active>true</active>
+	<active>false</active>
 	<adult>false</adult>
 	<language>es</language>
 
@@ -17,7 +17,7 @@
 	<changes>
 		<change>
 			<date>13/07/2017</date>
-			<autor>M</autor>
+			<autor></autor>
 			<description>Creacion addon</description>
 		</change>
 	</changes>
