@@ -16,22 +16,22 @@
 	<changes>
 		<change>
 			<date>15/03/2017</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>limpieza código</description>
 		</change>
 		<change>
 			<date>07/02/17</date>
-			<autor>super_berny</autor>
+			<autor></autor>
 			<description>Añadir cuadro de progreso</description>
 		</change>
 		<change>
 			<date>01/07/16</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>Eliminado código innecesario.</description>
 		</change>
 		<change> 
 			<date>29/04/16</date>
-			<autor>super_berny</autor>
+			<autor></autor>
 			<description>Posibilidad de incluir otros canales, mediante configuracion</description>
 		</change>
 	</changes>
