@@ -12,7 +12,7 @@
 	<bannermenu>https://github.com/master-1970/resources/raw/master/images/bannermenu/pelis24.png</bannermenu>
 
 	<update_url>https://raw.githubusercontent.com/MiTvSpain/mitvspain/master/mitvspain/python/main-classic/channels/</update_url>
-	<version>9</version>
+	<version>9.1</version>
 
 	<changes>
 		<change>
