@@ -11,7 +11,7 @@
 	<changes>
 		<change>
 			<date>27/07/2017</date>
-			<autor>1k2g962r</autor>
+			<autor></autor>
 			<description>Fixes rápidos</description>
 		</change>
 		<change>
