@@ -16,12 +16,12 @@
 	<changes>
 		<change>
 			<date>15/03/2017</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>limpieza código</description>
 		</change>
 		<change>
 			<date>01/07/2016</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>Eliminado código innecesario.</description>
 		</change>
 	</changes>
