@@ -17,12 +17,12 @@
 	<changes>
 		<change>
 			<date>15/03/2017</date>
-			<autor>SeiTaN</autor>
+			<autor></autor>
 			<description>limpieza código</description>
 		</change>
 		<change>
 			<date>23/01/17</date>
-			<autor>eniebla</autor>
+			<autor></autor>
 			<description>First version</description>
 		</change>
 	</changes>
