@@ -10,7 +10,7 @@
     <string id="30000">Reproductor (solo XBOX):</string>
     <string id="30001">Comprobar actualizaciones:</string>
     <string id="30004">Actualizar automáticamente canales:</string>
-    <string id="30201">Actualizar la biblioteca al abrir XBMC</string>
+    <string id="30201">Actualizar la biblioteca al abrir XBMC - Kodi</string>
     <string id="30002">Mostrar canales para adultos</string>
     <string id="30003">Generar log detallado:</string>
     <string id="30043">Forzar el modo de vista:</string>
