@@ -38,7 +38,7 @@
 		<type>text</type>
 		<visible>true</visible>
 	</settings>
-	<thumbnail>https://raw.githubusercontent.com/pelisalacarta-ce/media/master/servers/server_alldebrid.png</thumbnail>
+	<thumbnail>https://raw.githubusercontent.com/MiTvSpain/mitvspain/master/servers/server_alldebrid.png</thumbnail>
 	<update_url>https://raw.githubusercontent.com/MiTvSpain/mitvspain/master/mitvspain/python/main-classic/servers/</update_url>
 	<version>1</version>
 </server>
