@@ -3,7 +3,7 @@
 	<active>true</active>
 	<changes>
 		<change>
-			<autor>Intel1</autor>
+			<autor></autor>
 			<date>18/07/2017</date>
 			<description>Versión inicial</description>
 		</change>
